@startuml
skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false

'left to right direction

skinparam classAttributeIconSize 0

hide circle
hide methods

title Domain Model - US002


class Announcement {
acceptanceDate
}
class Commission {
commissionValue
}
class CommissionType{
designation
}
class Property{
 area
 distanceCityCenter
}

class Residence{
 numberBedrooms
 numberBathrooms
 parkingSpace
}
class House{
 basement
 inhabitableLoft
 sunExposure
}
class TypeProperty{
designation
}
class TypeResidence{
designation
}
class Photograph{
uri
}
class Location{
streetName
city
district
state
zipCode
}
class Business{
price
}
class Lease{
contractDuration
}
class Agent {
}
class AvailableEquipment{
description
}
class Request{
requestDate
}
class TypeBusiness{
description
}


Agent "1" -- "*" Announcement: is published by <
TypeProperty "1" -- "1" Property: is a description of >
Residence -up-|> Property
TypeResidence "1" -up- "1" Residence: is a description of >
House -up-|> Residence
Property "1" - "*" Photograph: is visualized in >
Property "1"--"1" Location: has address >
Business <|-- Lease
Residence "1" -- "*"AvailableEquipment: includes >
Announcement "1" -- "1" Commission : is assigned to <
Commission "*" -- "1" CommissionType : is categorized in >
Property "1" -- "1" Request : < has information about
Request "1" -- "1" Business: is described by >
TypeBusiness "1" -- "1" Business : describes >
Announcement "1" -- "1" Request : is  based on >



@enduml